--- a/index.html
+++ b/index.html
@@ -12,74 +12,85 @@
     <main>
       <header>
         <h1>Sam Bezzant</h1>
-        <p>🚀 I build things for the web</p>
+        <p>🚀 Full-stack software developer</p>
       </header>
 
       <blockquote>
-        <p>
-          I am a software engineer specializing in building (and occasionally
-          designing) exceptional user experiences. Currently I am focused on
-          building accessible, education-centered products at CoderHeroes
-        </p>
+        <p>I am a software engineer specializing in web development.</p>
       </blockquote>
 
       <section>
-        <h2>📜 Manifesto</h2>
+        <h2>📜 About me</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
+          Based in Beaverton Oregon I have a background in business. I am
+          passionate about accessibility, Agile software development, education
+          and React. New technology, libraries and frameworks capture my
+          imagination.
         </p>
 
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
+          I value critical thinking with an impulsivity to remove bugs before
+          production. A passionate dedication to perfection coupled with
+          integrity guided by a moral compass is what defines me.
         </p>
 
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
+          Tech stack:<br />
+          Frontend: React.js, Redux, Hooks, Context API, Jest, Cypress, Yum,
+          Axios, Javascript, HTML, CSS, Ant Design, NextJS, TailwindCSS, Figma,
+          Less, Three.JS, Whimsical
+          <br />Backend: Node.js, Express, SQL, PostgreSQL,, Postico, Docker,
+          Python, Git CLI, GitHub, Vercel, Heroku, Sanity.io, Netlify, Vite
+          <br />Expertise: Agile, Algorithms, Architecture, Debugging,
+          Deployment
         </p>
       </section>
 
       <section class="light">
         <h2>👩🏽‍🚀 Projects</h2>
-
+        CoderHeroes, Full-Stack Developer, Technical Project Manager
+        <br />
+        <a href="https://a.coderheroes.dev/"> CoderHeroes</a>
+        <br />
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
+          I am currently a technical project manager for this project. I have
+          focused my team on the interdepartmental notes system. We have created
+          this feature from the ground up using Whimsical and Figma for our
+          designs and organizing our progress with Agile methodologies. Our
+          progresses have been tracked using the Trello kanban boards.
+          <br />
+          During our daily stand up meetings we have scoped out the sprint's
+          objectives and confirmed progress and direction with the stakeholders
+          and our managers at sprint product reviews.
+          <br />
+          Using React and associated libraries, we have created an interactive
+          notes system designed to streamline important communications with
+          quick view priority levels and subject and an updatable resolution
+          status. We have styled the designs with multiple libraries and CSS to
+          make the user flow cohesive and easy to use.
+          <br />
+          Using PostgreSQL, we have created migrations with the Knex library to
+          add persistence on a server level. We've created a RESTful API using
+          Node.js with necessary middleware protecting our CRUD endpoints in our
+          notes routers to add, edit, and delete notes
         </p>
+        <br />
+        <p>
+          Nasa Photo Generator, Frontend Developer UX/UI
+          <br />
+          <a href="https://stately-cucurucho-0b461d.netlify.app/"
+            >Live with Netlify</a
+          >
+          <br />
+          Queries the NASA photo of the day api with random pic generation and
+          dark/light theme toggle using hooks. Implementation of themes, inline
+          component styles coupled with beautiful subject matter makes this app
+          a joy to interact with.
+        </p>
+        <br />
+        <p></p>
 
         <h2>🏆 Accomplishments</h2>
-
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
-        </p>
       </section>
 
       <blockquote>
