rough final ready for deploy

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <main>
       <header>
         <h1>Sam Bezzant</h1>
-        <p>🚀 Full-stack software developer</p>
+        <p>🚀 Full-Stack Software Engineer</p>
       </header>
 
       <blockquote>
-        <p>I am a software engineer specializing in web development.</p>
+        <p>I work with the web</p>
       </blockquote>
 
       <section>
@@ -51,7 +51,6 @@
         CoderHeroes, Full-Stack Developer, Technical Project Manager
         <br />
         <a href="https://a.coderheroes.dev/"> CoderHeroes</a>
-        <br />
         <p>
           I am currently a technical project manager for this project. I have
           focused my team on the interdepartmental notes system. We have created
@@ -74,23 +73,38 @@
           Node.js with necessary middleware protecting our CRUD endpoints in our
           notes routers to add, edit, and delete notes
         </p>
+
+        NASA Photo Generator, Frontend Developer UX/UI
         <br />
+        <a href="https://stately-cucurucho-0b461d.netlify.app/"
+          >NASA Photo Generator</a
+        >
         <p>
-          Nasa Photo Generator, Frontend Developer UX/UI
-          <br />
-          <a href="https://stately-cucurucho-0b461d.netlify.app/"
-            >Live with Netlify</a
-          >
-          <br />
           Queries the NASA photo of the day api with random pic generation and
           dark/light theme toggle using hooks. Implementation of themes, inline
           component styles coupled with beautiful subject matter makes this app
           a joy to interact with.
         </p>
+
+        Potluck Planner, Frontend Developer
         <br />
-        <p></p>
+        <a href="https://github.com/BW-Potluck-Planner-3">GitHub</a>
+        <p>
+          Established UI for React app that facilitates potluck planning using
+          React, with CSS and HTML for styling, and event handlers to maintain
+          UI in event of default Utilized Yup for login form validation Stored
+          JWT using use effects, allowing user-specific access through private
+          routes established with react router dom Managed state via React
+          Established middleware using Axios with Auth, allowing data to flow
+          between frontend and backend
+        </p>
 
         <h2>🏆 Accomplishments</h2>
+        Bloom Institute of Technology Full-Stack Software Engineering
+        Certificate June 2022
+        <br />
+        <br />
+        National Career Readiness Certificate - Platinum 2015
       </section>
 
       <blockquote>
@@ -100,40 +114,39 @@
       <section class="left">
         <h2>🌮 Work History</h2>
 
-        <h3>McDonalds</h3>
+        <h3>CoderHeroes</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
+          April 2022 - Present
+          <br />Full-stack developer, Technical project manager. Implementing
+          parent, admin and student workflows based on Figma design using Agile
+          develoment. Implemented Okta authentication. Currently working on
+          forms usin React.
         </p>
-        <h3>Burger King</h3>
+        <h3>Telecare Corporation</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
+          Portland, Or - Residential Counselor 2021 - Present
+          <br />Increased billable events by 275% by providing counseling and
+          support to residents transitioning to self-sufficiency Slashed
+          expenditures on medication by implementing an efficient inventory
+          management system
         </p>
-        <h3>Taco Bell</h3>
+        <h3>Automotive Refinishing Technician</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
+          Freelance Various Locations, Oregon City, OR - Collision Technician
+          2010 - 2021 Implemented environmentally friendly waterborne paint
+          system while staying up to date on industry changes and new technology
+          Maintained highly productive commission based production schedule
+          Sustained ongoing Continuing Education certification pertaining to
+          relevant technologies and industry changes
         </p>
       </section>
 
       <blockquote>
-        <p>Thanks for watching!</p>
+        <p>
+          <a href="https://www.linkedin.com/in/sam-bezzant/">
+            Thanks for watching, contact me here!
+          </a>
+        </p>
       </blockquote>
     </main>
 
