--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       </blockquote>
 
       <section class="left">
-        <h2>🌮 Work History</h2>
+        <h2>Work History</h2>
 
         <h3>CoderHeroes</h3>
         <p>
