--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <section>
         <h2>📜 About me</h2>
         <p>
-          Based in Beaverton Oregon I have a background in business. I am
+          Based in Beaverton Oregon, I have a background in business. I am
           passionate about accessibility, Agile software development, education
           and React. New technology, libraries and frameworks capture my
           imagination.
@@ -119,8 +119,7 @@
           April 2022 - Present
           <br />Full-stack developer, Technical project manager. Implementing
           parent, admin and student workflows based on Figma design using Agile
-          develoment. Implemented Okta authentication. Currently working on
-          forms usin React.
+          develoment. Implemented Okta authentication.
         </p>
         <h3>Telecare Corporation</h3>
         <p>
